--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.3",
   "description": "Gatsby source plugin for randomuser.me data",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src --out-dir ."
   },
   "keywords": [
     "gatsby",
@@ -20,7 +20,16 @@
     "url": "https://github.com/grantglidewell/gatsby-source-randomuser"
   },
   "dependencies": {
+    "babel-preset-gatsby-package": "^0.1.3",
     "node-fetch": "^2.3.0",
     "query-string": "^6.3.0"
+  },
+  "peerDependencies": {
+    "gatsby": "^2.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "cross-env": "^5.1.4"
   }
 }
