--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-source-randomuser",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Gatsby source plugin for randomuser.me data",
   "scripts": {
-    "build": "babel src --out-dir ."
+    "prepublishOnly": "babel src --out-dir ."
   },
   "keywords": [
     "gatsby",
